--- a/web/index.html
+++ b/web/index.html
@@ -730,14 +730,27 @@
                                    class="w-full px-3 py-2.5 text-sm border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary/20 focus:border-primary"
                                    :aria-invalid="authErrors.account ? 'true' : 'false'"
                                    required>
+                            <div x-show="authMode === 'login' && authAccountHistory.length > 0"
+                                 x-cloak
+                                 class="mt-2 flex flex-wrap gap-2">
+                                <template x-for="account in authAccountHistory" :key="account">
+                                    <button type="button"
+                                            @click="selectAuthHistoryAccount(account)"
+                                            class="px-2.5 py-1 text-xs rounded-full border border-gray-200 text-muted hover:text-primary hover:border-primary/40 transition-colors cursor-pointer">
+                                        <span x-text="account"></span>
+                                    </button>
+                                </template>
+                            </div>
                             <p x-show="authErrors.account" x-text="authErrors.account" class="mt-1 text-xs text-red-500"></p>
                         </div>
 
                         <div>
                             <label for="auth-password" class="block text-sm font-medium text-primary mb-1">密码</label>
                             <input id="auth-password"
+                                   data-auth-password
                                    x-model="authForm.password"
                                    @input="authErrors.password = ''"
+                                   @keydown.enter="handleAuthPasswordEnter($event)"
                                    type="password"
                                    :autocomplete="authMode === 'register' ? 'new-password' : 'current-password'"
                                    placeholder="请输入密码（8-64位）"
@@ -2632,7 +2645,7 @@
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/>
                                     </svg>
                                     <span>快速</span>
-                                    <span class="text-[10px] text-muted hidden sm:inline">12-16题</span>
+                                    <span class="text-[10px] text-muted hidden sm:inline" x-text="interviewDepthV2?.enabled ? '14-20题' : '12-16题'"></span>
                                 </button>
                                 <!-- 标准模式 -->
                                 <button type="button"
@@ -2645,7 +2658,7 @@
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"/>
                                     </svg>
                                     <span>标准</span>
-                                    <span class="text-[10px] text-muted hidden sm:inline">20-28题</span>
+                                    <span class="text-[10px] text-muted hidden sm:inline" x-text="interviewDepthV2?.enabled ? '24-34题' : '20-28题'"></span>
                                     <span class="text-[8px] bg-[#357BE2]/15 text-[#357BE2] px-1 py-0.5 rounded ml-0.5 hidden sm:inline">荐</span>
                                 </button>
                                 <!-- 深度模式 -->
@@ -2659,7 +2672,7 @@
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0zM10 7v3m0 0v3m0-3h3m-3 0H7"/>
                                     </svg>
                                     <span>深度</span>
-                                    <span class="text-[10px] text-muted hidden sm:inline">28-40题</span>
+                                    <span class="text-[10px] text-muted hidden sm:inline" x-text="interviewDepthV2?.enabled ? '34-52题' : '28-40题'"></span>
                                 </button>
                             </div>
                             <!-- 悬停提示 -->
@@ -2669,13 +2682,13 @@
                                  x-transition:enter-end="opacity-100 translate-y-0"
                                  class="absolute left-0 right-0 mt-2 p-2 bg-gray-800 text-white text-xs rounded-lg shadow-lg z-10">
                                 <template x-if="hoveredDepthMode === 'quick'">
-                                    <span>每维度 2 个核心问题，适度追问。适合时间紧张的简单项目</span>
+                                    <span x-text="interviewDepthV2?.enabled ? '每维度 2-3 个问题，轻量追问并设置质量门槛，适合快速摸底。' : '每维度 2 个核心问题，适度追问。适合时间紧张的简单项目'"></span>
                                 </template>
                                 <template x-if="hoveredDepthMode === 'standard'">
-                                    <span>每维度 3 个问题，智能追问。效率与深度兼顾，适合大多数情况</span>
+                                    <span x-text="interviewDepthV2?.enabled ? '每维度 3-4 个问题，支持多轮追问与盲区补问，效率与深度兼顾。' : '每维度 3 个问题，智能追问。效率与深度兼顾，适合大多数情况'"></span>
                                 </template>
                                 <template x-if="hoveredDepthMode === 'deep'">
-                                    <span>每维度 4 个问题，充分追问。深入挖掘细节，适合复杂项目</span>
+                                    <span x-text="interviewDepthV2?.enabled ? '每维度 4-6 个问题，最多 3 轮追问并启用质量门禁，适合高复杂度项目。' : '每维度 4 个问题，充分追问。深入挖掘细节，适合复杂项目'"></span>
                                 </template>
                             </div>
                         </div>
