访谈深度增强V2：接入灰度开关与质量门禁
后端：新增V2模式参数、强制追问规则与维度完成门禁判定
后端：补充next-question返回质量预警与完成原因字段
配置：增加ENABLE_INTERVIEW_DEPTH_V2与模式开关示例项
文档：更新访谈模式说明与快速/标准/深度适用指引

--- a/web/help.html
+++ b/web/help.html
@@ -1299,11 +1299,12 @@
                     <li>技术约束：部署方式、集成接口、性能安全。</li>
                     <li>项目约束：预算、周期、资源、优先级。</li>
                 </ul>
-                <h3 id="interview-mode">访谈模式（标准 / 深度）</h3>
+                <h3 id="interview-mode">访谈模式（快速 / 标准 / 深度）</h3>
                 <ul class="list">
-                    <li>标准模式：每个维度问题数量较少，适合快速调研与首次摸底。</li>
-                    <li>深度模式：每个维度问题更多，追问预算更高，适合复杂场景或关键项目。</li>
-                    <li>建议：首次访谈用标准模式，进入方案阶段再用深度模式。</li>
+                    <li>快速模式：每个维度 2-3 个问题，轻量追问，适合时间紧张的快速摸底。</li>
+                    <li>标准模式：每个维度 3-4 个问题，支持多轮追问与盲区补问，适合多数项目。</li>
+                    <li>深度模式：每个维度 4-6 个问题，追问预算更高并启用质量门禁，适合复杂或关键项目。</li>
+                    <li>建议：首次访谈可用标准模式，关键决策前建议补一次深度模式。</li>
                 </ul>
                 <h3 id="follow-up-strategy">追问策略</h3>
                 <ul class="list">
